# parley-cosmic-benchmarks

./: .gitignore  Cargo.toml
benches/: cosmic.rs  mod.rs  parley.rs
sample/: FIRST_CHAPTER_OF_MOBY_DICK.txt
